# fackr

./: .gitignore  01_hover.py  02_completion.py  CLAUDE.md  Cargo.toml  FUSS_STATUS.md  TESTING.md  fackr.spec  test_ghost.py  test_ghost_text.rs  test_simple.txt
.github/workflows/: build.yml
src/: main.rs
src/buffer/: mod.rs  rope.rs
src/editor/: cursor.rs  history.rs  mod.rs  state.rs  welcome.rs
src/fuss/: mod.rs  state.rs  tree.rs
src/input/: key.rs  mod.rs  mouse.rs
src/lsp/: client.rs  manager.rs  message.rs  mod.rs  process.rs  protocol.rs  server_manager.rs  types.rs
src/render/: mod.rs  screen.rs
src/syntax/: highlight.rs  languages.rs  mod.rs
src/terminal/: mod.rs  panel.rs  pty.rs  screen.rs
src/util/: mod.rs  unicode.rs
src/workspace/: mod.rs  recents.rs  state.rs
test_lsp/: 01_hover.py  02_completion.py  03_diagnostics.py  04_goto_definition.py  05_references.py  06_rename.py  07_formatting.py  08_multi_cursor.py  README.md
test_lsp/.fackr/backups/: 3466e9827c04dfa4.bak
