[package]
name = "fackr"
version = "0.7.0"
edition = "2021"
description = "Terminal text editor"
authors = ["Matthew Forrester Wolffe"]

[dependencies]
# Terminal
crossterm = "0.28"

# Text handling
ropey = "1.6"
unicode-segmentation = "1.10"
unicode-width = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# System clipboard
arboard = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex for search
regex = "1"

# System directories
dirs = "5"

[[bin]]
name = "fackr"
path = "src/main.rs"

[[bin]]
name = "fac"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
