[package]
name = "fackr"
version = "1.0.2"
edition = "2021"
description = "Terminal text editor"
authors = ["Matthew Forrester Wolffe"]

[dependencies]
# Terminal
crossterm = { version = "0.28", features = ["libc"] }

# Text handling
ropey = "1.6"
unicode-segmentation = "1.10"
unicode-width = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# System clipboard
arboard = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex for search
regex = "1"

# System directories
dirs = "5"

# Integrated terminal
portable-pty = "0.8"
vte = "0.13"

[[bin]]
name = "fackr"
path = "src/main.rs"

[[bin]]
name = "keytest"
path = "src/bin/keytest.rs"

[profile.release]
opt-level = 3
lto = true
